<resources>
    <string name="app_name">ExpoSure  </string>
    <string name="title_label">ExpoSure</string>
    <string name="subtitle_label">Your Expo Guide!</string>
    <string name="main_text_label">Your companion for Expos and events. Having the power to catalog exhibition products while making them at the finger tips of visitors who can browse and save their top ones on their mobiles.</string>
    <string name="btnOrganizers_text">Organizer</string>
    <string name="btnBusiness_text">Business</string>
    <string name="btnVisitor_text">Visitor</string>
    <string name="imgPeople_cd">People</string>
    <string name="subtitle_make_a_choice">Make a Choice!</string>
    <string name="organizer_verbose_text">You have the power to create events, add businesses to these events and then view them all!</string>
    <string name="btnViewAllEvents_text">View All Events</string>
    <string name="organizer_create_new_event_text">Create New Event</string>
    <string name="search_hint">Search</string>
    <string name="text_view_title">Title</string>
    <string name="event_date">2020/12/03</string>
    <string name="event_email_hint">relatora@gmail.com</string>
    <string name="event_contact_phone_hint">5194668200</string>
    <string name="event_location_hint">777 London Road, Sarnia, Ontario, Canada</string>
    <string name="not_found">Not Found</string>
    <string name="search">Search</string>
    <string name="event_image">Event Image</string>
    <string name="add_event_title_label_hint">Add Events Here</string>
    <string name="add_events_label">Enter event details below.</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="contact_name">Contact Name</string>
    <string name="contact_phone">Contact Phone</string>
    <string name="email">Email</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="create_event">Create Event</string>
    <string name="get_date_text">Get Date</string>
    <string name="get_time_text">Get Time</string>
    <string name="expo_event_create_confirm_msg">A new event has been created with id</string>
    <string name="business_main_lables">You can add products to your business. That way visitors can view them or add them to their shortlist. You can also view events!</string>
    <string name="view_your_products">View your products</string>
    <string name="add_a_product">Add a product</string>
    <string name="view_all_events">View all events</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="price">Price</string>
    <string name="dimensions">Dimensions</string>
    <string name="user_created_successfully_msg">A new User is created with user id</string>
    <string name="btn_favorites_text">View Favorites</string>
    <string name="btn_qr_scanner">QR Scanner</string>
</resources>
