<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/titleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/bottom_button_std_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/titleLable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/title_label"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/title_label_size" />

        <TextView
            android:id="@+id/subtitleLable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtitle_label"
            android:textColor="@color/colorPrimary"
            android:layout_marginStart="@dimen/bottom_button_med_margin"
            android:textSize="@dimen/subtitle_lable_size" />
    </LinearLayout>

    <TextView
        android:id="@+id/main_text_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/page_layout_margin"
        android:fontFamily="monospace"
        android:text="@string/business_main_lables"
        android:textSize="@dimen/text_verbose_label" />

    <Button
        android:id="@+id/btnBusinessShowAllProducts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/bottom_button_std_margin"
        android:background="@color/colorPrimaryDark"
        android:text="@string/view_your_products"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnBusinessAddProducts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/bottom_button_std_margin"
        android:background="@color/colorPrimaryDark"
        android:text="@string/add_a_product"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnBusinessViewAllEvents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/bottom_button_std_margin"
        android:background="@color/colorPrimaryDark"
        android:text="@string/view_all_events"
        android:textColor="@color/white" />

    <ImageView
        android:id="@+id/imgPeople"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitEnd"
        android:contentDescription="@string/imgPeople_cd"
        app:srcCompat="@drawable/business" />


</LinearLayout>