<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
<LinearLayout
    android:id="@+id/rootLayout"
    android:fitsSystemWindows="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/page_layout_margin"
    android:fadeScrollbars="true"
    android:isScrollContainer="false"
    android:nestedScrollingEnabled="true"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".MainActivity">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/titleLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/title_layout_bottom_margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/titleLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:layout_marginEnd="@dimen/main_title_right_margin"
                    android:text="@string/title_label"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/title_label_size" />

                <TextView
                    android:id="@+id/subtitleLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layoutDirection="inherit"
                    android:text="@string/create_event"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/subtitle_lable_size" />

            </LinearLayout>

            <TextView
                android:id="@+id/addEventTitleLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/add_event_title_label_hint"
                android:text="@string/add_events_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/lblNameAddEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorAccent"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/txtNameAddEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_weight="1"
                android:hint="@string/name"
                android:inputType="textImeMultiLine"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="@dimen/input_text_size" />

            <TextView
                android:id="@+id/lblLocationAddEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorAccent"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/txtLocationAddEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_weight="1"
                android:hint="@string/location"
                android:inputType="textImeMultiLine"
                android:textSize="@dimen/input_text_size"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/lblContactNameAddEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorAccent"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/txtContactNameAddEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_weight="1"
                android:hint="@string/contact_name"
                android:inputType="text"
                android:textSize="@dimen/input_text_size"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/lblContactPhoneAddEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_phone"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorAccent"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/txtContactPhoneAddEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_weight="1"
                android:hint="@string/contact_phone"
                android:inputType="phone"
                android:textSize="@dimen/input_text_size"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/lblContactEmailAddEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorAccent"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/txtContactEmailAddEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_weight="1"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/input_text_size"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/lblDateAddEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorAccent"
                android:textStyle="bold|italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/txtDateAddEvent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_horizontal"
                    android:layout_weight="1"
                    android:editable="false"
                    android:focusable="auto"
                    android:focusableInTouchMode="false"
                    android:hint="@string/date"
                    android:inputType="datetime"
                    android:textSize="@dimen/input_text_size"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <Button
                    android:id="@+id/btnDateAddEvent"
                    android:layout_width="@dimen/date_time_button_width"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/date_time_button_margin_left"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:shadowColor="@color/colorPrimaryDark"
                    android:text="@string/get_date_text"
                    android:textColor="@color/white"
                    android:textStyle="bold|italic" />
            </LinearLayout>

            <TextView
                android:id="@+id/lblTimeAddEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorAccent"
                android:textStyle="bold|italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/txtTimeAddEvent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_horizontal"
                    android:layout_weight="1"
                    android:editable="false"
                    android:focusable="auto"
                    android:focusableInTouchMode="false"
                    android:hint="@string/time"
                    android:inputType="time"
                    android:textSize="@dimen/input_text_size"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <Button
                    android:id="@+id/btnTimeAddEvent"
                    android:layout_width="@dimen/date_time_button_width"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/date_time_button_margin_left"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:shadowColor="@color/colorPrimaryDark"
                    android:text="@string/get_time_text"
                    android:textColor="@color/white"
                    android:textStyle="bold|italic" />
            </LinearLayout>

            <Button
                android:id="@+id/btnSubmitAddEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/main_submit_button_margin_top"
                android:layout_marginBottom="@dimen/bottom_button_std_margin"
                android:background="@color/colorPrimaryDark"
                android:text="@string/create_event"
                android:textColor="@color/white" />

        </LinearLayout>

</LinearLayout>
    </RelativeLayout>
</ScrollView>