<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="8dp"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_Product_QRCode"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:srcCompat="@drawable/ic_photo_size_select_actual_black_24dp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/bottom_button_std_margin">

            <TextView
                android:id="@+id/txt_product_name"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_marginStart="@dimen/page_layout_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:hint="@string/product_name" />

            <TextView
                android:id="@+id/txt_product_description"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/page_layout_margin"
                android:hint="@string/product_description"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/txt_product_dimensions"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/page_layout_margin"
                android:hint="@string/dimensions"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/txt_product_price"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/page_layout_margin"
                android:hint="@string/price"
                android:textAllCaps="true" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </LinearLayout>
</androidx.cardview.widget.CardView>