<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/page_layout_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/titleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/title_layout_bottom_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/titleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:layout_marginEnd="@dimen/main_title_right_margin"
            android:text="@string/title_label"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/title_label_size" />

        <TextView
            android:id="@+id/subtitleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtitle_make_a_choice"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/subtitle_lable_size" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.mancj.materialsearchbar.MaterialSearchBar
            android:id="@+id/product_search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF9800"
            app:mt_hint="@string/search" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_product_search"
            android:layout_below="@+id/product_search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>
    </RelativeLayout>


</LinearLayout>